--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://86d9fd41-fe94-4ac1-8b21-3c10dab0672c.preview.emergentagent.com
 WDS_SOCKET_PORT=443
